--- a/force-app/main/default/classes/Test_AddContactToValitiveMonitioringSet.cls
+++ b/force-app/main/default/classes/Test_AddContactToValitiveMonitioringSet.cls
@@ -12,6 +12,7 @@ private class Test_AddContactToValitiveMonitioringSet {
         contact.FirstName = 'John';
         contact.LastName = 'Doe';
         contact.Personal_Identity_Number__c = legalId;
+        contact.IsInMonitoringSet__c = false;
         insert contact;
 
         Test.setMock(HttpCalloutMock.class, mock.mockServer);
