--- a/force-app/main/default/classes/ValitivePropertiesProvider.cls
+++ b/force-app/main/default/classes/ValitivePropertiesProvider.cls
@@ -2,6 +2,7 @@
 
 public class ValitivePropertiesProvider implements IValitivePropertiesProvider {
 
+    @TestVisible
     private Valitive_Setting__mdt SETTINGS;
 
     public ValitivePropertiesProvider() {
